# aiden-job-finder

./: .env  .gitignore  .pre-commit-config.yaml  .python-version  .secret  Dockerfile  Makefile  README.md  dev.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  request.json  requests.json  requirements.txt  test.ipynb
.github/workflows/: deploy.yml  docker-build-push.yml
aiden-recommender/: .env  Dockerfile  README.md  pyproject.toml
aiden-recommender/aiden_recommender/: __init__.py  main.py  models.py  tools.py
aiden-recommender/aiden_recommender/form_finder/: form_finder.py
aiden-recommender/aiden_recommender/france_travail_clients/: abstract_france_travail_client.py  job_search_client.py
aiden-recommender/aiden_recommender/scrapers/: __init__.py  abstract_parser.py  abstract_scraper.py  field_extractors.py  models.py  scraper_aggregator.py  scraper_base.py  utils.py
aiden-recommender/aiden_recommender/scrapers/france_travail/: parser.py  scraper.py
aiden-recommender/aiden_recommender/scrapers/indeed/: __init__.py  parser.py  scraper.py
aiden-recommender/aiden_recommender/scrapers/wtj/: __init__.py  flow.py  parser.py  schemas.py  scraper.py
aiden-scraper/: .python-version  Dockerfile  pyproject.toml
aiden-scraper/aiden_scraper/: __init__.py  main.py  utils.py
aiden-scraper/aiden_scraper/scrapers/: utils.py
aiden-scraper/aiden_scraper/scrapers/indeed/: __init__.py  scraper.py
aiden-scraper/aiden_scraper/scrapers/wtj/: __init__.py  schemas.py  scraper.py
aiden-scraper/aiden_scraper/wtj/: scraper.py
aiden-shared/: pyproject.toml
aiden-shared/aiden_shared/: constants.py  models.py  tools.py  utils.py
aiden-web/: Dockerfile  README.md  manage.py  pyproject.toml
aiden-web/aiden_app/: __init__.py  apps.py  consumers.py  forms.py  models.py  routing.py  storage.py  urls.py  views.py  views_v2.py
aiden-web/aiden_app/migrations/: 0001_initial.py  0002_alter_userprofile_photo.py  0003_alter_userprofile_unique_together.py  0004_profileinfo_embeddings_id.py  0005_alter_profileinfo_cv_title_and_more.py  0006_alter_project_url.py  0006_education_user_experience_user_experiencedetail_user_and_more.py  0007_alter_education_user_alter_experience_user_and_more.py  0008_alter_profileinfo_email_alter_sociallink_url.py  0008_remove_profileinfo_photo_url_and_more.py  0009_alter_userprofile_photo_document.py  0009_conversation_message.py  0009_remove_profileinfo_photo_url_and_more.py  0010_alter_project_url.py  0010_alter_userprofile_photo.py  0010_remove_conversation_user_profile.py  0011_remove_profileinfo_photo_url.py
aiden-web/aiden_app/services/: chat_service.py  chat_service_v2.py
aiden-web/aiden_app/services/agents/: agent.py  mistral_agent.py  prompts.py
aiden-web/aiden_app/services/tools/: scraper_tool.py  talk_tool.py  tool.py  tool_aggregator.py  tools.json
aiden-web/aiden_app/services/tools/utils/: cv_editor.py
aiden-web/aiden_app/static/css/: styles.css
aiden-web/aiden_app/static/js/: main.js
aiden-web/aiden_app/static/js/chat/: chatHandler.js  messageHandler.js
aiden-web/aiden_app/static/js/langui/: utils.js
aiden-web/aiden_app/static/js/profile/: documentHandler.js  profileHandler.js
aiden-web/aiden_app/static/js/utils/: cookies.js  counters.js  jsonFormatter.js
aiden-web/aiden_app/templates/: base-headers.html  chat.html  home.html  langui-chat.html  login.html  signup.html
aiden-web/aiden_app/templates/langui/: assistant-message-buttons.html  conversation-display.html  cover-letter-display.html  create-profile.html  document-display.html  edited-cv-display.html  filled-form-display.html  job-offer-grid-container.html  job-offer-grid.html  job-offer.html  message.html  messages.html  offer-focus.html  profile-icons.html  prompt-container.html  search-input.html  sidebar.html
aiden-web/aiden_project/: asgi.py  settings.py  urls.py  wsgi.py
aiden-web/locale/en/LC_MESSAGES/: django.po
aiden-web/locale/fr/LC_MESSAGES/: django.mo  django.po
aiden-web/media/cv/: cv_schema.json  cv_template.tex
aiden_app/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
aiden_app/tools/: tool.py  (+7 more)
aiden_project/: asgi.py  settings.py  urls.py  wsgi.py
terraform/: main.tf  outputs.tf  variables.tf
(+14 files in other folders)
