[tool.poetry]
name = "aiden-job-finder"
version = "0.1.0"
description = "find jobs with llms"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.20.0"
Django = "^5.0.4"
PyMuPDF = "^1.24.2"
PyPDF2 = "^3.0.1"
chompjs = "^1.2.3"
Jinja2 = "^3.1.3"
pandas = "^2.2.2"
mistralai = "^0.1.8"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
remote-pdb = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
