[tool.poetry]
name = "aiden-job-finder"
version = "0.1.0"
description = "find jobs with llms"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
PyMuPDF = "^1.24.2"
PyPDF2 = "^3.0.1"
Jinja2 = "^3.1.3"
pandas = "^2.2.2"
mistralai = "^0.4.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
djangorestframework = "^3.15.1"
pillow = "^10.3.0"
qdrant-client = "^1.9.1"
numpy = "^1.26.4"
channels = "^4.1.0"
channels-redis = "^4.2.0"
markdown2 = "^2.4.13"
pygments = "^2.18.0"
chompjs = "^1.2.3"
latexcodec = "^3.0.0"
aiden-shared = {path = "../aiden-shared"}
loguru = "^0.7.2"
django-storages = "^1.14.4"
boto3 = "^1.34.151"
django-widget-tweaks = "^1.5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
remote-pdb = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
